add tag and some change yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to EC2
+name: Deploy Docker App to EC2
 
 on:
   push:
@@ -7,17 +7,17 @@ on:
 
 jobs:
   deploy:
-    name: Deploy 
+    name: Deploy via SSH
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Code Repository
+    - name: Checkout Repository
       uses: actions/checkout@v3
 
     - name: Deploy to EC2 using SSH
       uses: appleboy/ssh-action@v1.0.3
       with:
-        host: ${{ secrets.EC2_HOST }}
+        host: 23.20.236.45
         username: ubuntu
         key: ${{ secrets.EC2_SSH_KEY }}
         script: |
@@ -27,7 +27,7 @@ jobs:
           ls -la /home/ubuntu
           cd /home/ubuntu/Python_Protfolio_Website   # or wherever your repo is cloned
           git pull origin main
-          docker build -t py_portfolio:v1.0.0 .
+          docker build -t myapp .
           docker stop ajmdrstalha-portfolio || true
           docker rm ajmdrstalha-portfolio || true
-          docker run -d -p 9001:8501 --name ajmdrstalha-portfolio py_portfolio:v1.0.0
+          docker run -d -p 9001:8501 --name ajmdrstalha-portfolio myapp
