--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,10 +25,11 @@ jobs:
           whoami
           hostname
           ls -la /home/ubuntu
-          cd /home/ubuntu/Python_Protfolio_Website   # wherever your repo is cloned
-          git pull origin main
-          docker rmi py_portfolio:v1.0.0 || true
-          docker build -t py_portfolio:v1.0.0 .
-          docker stop ajmdrstalha-portfolio || true
-          docker rm ajmdrstalha-portfolio || true
-          docker run -d -p 9001:8501 --name ajmdrstalha-portfolio py_portfolio:v1.0.0
+            cd /home/ubuntu/Python_Protfolio_Website   # wherever your repo is cloned
+            git pull origin main
+            docker stop ajmdrstalha-portfolio || true
+            docker rm ajmdrstalha-portfolio || true
+            docker rmi py_portfolio:v1.0.0 || true
+            git log -n 5 --oneline
+            docker build -t py_portfolio:v1.0.0 .
+            docker run -d -p 9001:8501 --name ajmdrstalha-portfolio py_portfolio:v1.0.0
